--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <canvas id="c"></canvas>
+    <img class="back-image" src="https://images.unsplash.com/photo-1592296429945-93008c7e5a59?q=80&w=2673&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
